Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-112263

Progressive AA does not work when using principled materials

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • 5.15.14
    • 5.15.0, 5.15.1, 5.15.2, 5.15.3, 5.15.4, 5.15.5, 5.15.6, 5.15.7, 5.15.14
    • Quick: 3D
    • None
    • All
    • e951b7202 (tqtc/lts-5.15)

    Description

      Progressive AA doesn't work when any material in the scene is PrincipledMaterial. 

      This issue can be easily reproduced in the antialiasing example. 

      1. With Progressive AA

             

             2. Without Progressive AA

           

       

       

       

      Attachments

        For Gerrit Dashboard: QTBUG-112263
        # Subject Branch Project Status CR V

        Activity

          People

            tokorpip Tomi Korpipää
            shluo Shaohua Luo
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes