Fix progressive anti-aliasing for PrincipledMaterial

Fixes: QTBUG-112263
Change-Id: Ib1b716bf19ac789a35962b7496e33534bc497ec7
Reviewed-by: Christian Strømme <christian.stromme@qt.io>